--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -30,7 +30,7 @@ For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller an
 __(some heading here? to separate from alignment)__
 Corals provide a useful case study to examine differences in species range alignment.  They are an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed; their dependence on photosynthesis provides habitat-limiting life history traits, and they don't tend to move.  Extracting data from the IUCN API [@REF?] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none are found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig 2, we created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
 
-AquaMaps' reliance upon FAO zones to constrain species ranges seems likely to result in odd species range boundaries where ecologically suitable habitat intersects with human-defined borders.  To explore the impact of these artificial constraints on species range predictions, we chose to focus on boundaries defined by longitude, as they seem less likely to coincide with ecological differences than boundaries defined by latitude.  As an example, we identified all AquaMaps species whose eastern or western range limit between between 5° S and 25° N latitudes coincided with the large vertical boundary between FAO regions 71 and 77 at 175° W longitude.
+AquaMaps' reliance upon FAO zones to constrain species ranges seems likely to result in abrupt species range boundaries where ecologically suitable habitat intersects with human-defined borders.  To explore the impact of these artificial constraints on species range predictions, we chose to focus on boundaries defined by longitude, as they seem less likely to coincide with ecological differences than boundaries defined by latitude.  As an example, we identified all AquaMaps species whose eastern or western range limit between between 25° S and 20° N latitudes coincided with the large vertical boundary between FAO regions 71 and 77 at 175° W longitude.
 
 The oceans abound with rare and poorly-understood species who offer sparse information on behavior and habitat preferences to inform models and expert opinion.  To identify such data-poor species within the set of paired map species, we used the ___robis???___ and ___rgbif???___ packages [@REFS] in R to identify known occurrences of each species; occurrences were averaged between the two occurrence databases as a proxy for data richness.
 
