--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -98,11 +98,11 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 
 ## Georegional constraint exploration
 
-[results] We identified 4,168 species whose equatorial ranges (between 5° S and 25° N) encounter a range limit at 175° W.  This longitudinal boundary created a western limit for 512 species, and eastern limit for 3,656 species.  Plotting the entire ranges of the 512 west-limited species (Fig 4) results in a very clear exclusion zone that matches perfectly with FAO region 71; while we did not focus on the boundary for region 57, a similar effect is readily apparent.
+[results] From the entirety of the AquaMaps dataset, we identified 3,577 Indo-Pacific species whose equatorial distributions (between 25° S and 20° N) encounter a range limit at 175° W.  This longitudinal boundary created a western limit for 369 species, and an eastern limit for 3,208 species.  A clear discontinuity in species distributions of the 3,208 west-limited species (Fig 4) matches perfectly with FAO region 77; other discontinuities are apparent at other FAO boundaries, despite these boundaries not being actively studied in the analysis.  Similar discontinuities were clear when mapping the west-limited species.
 
-> __Fig 4.__ Composite map showing AquaMaps predicted ranges for 512 species whose equatorial range (between 5° S and 25° N) encounters a western limit exactly at 175° W, the boundary between FAO Major Fishing Areas 71 and 77.  The range maps for these species conform exactly to the bounds of Area 71, as a result of AquaMaps using FAO areas as a rough georegional constraint on species ranges.  The boundary of Area 57 creates an additional clear exclusion zone for most of these species, despite the fact that this was not used as a selection criteria.
+> __Fig 4.__ Composite map showing AquaMaps predicted ranges for 3,208 species whose equatorial distribution encounters an eastern discontinuity exactly at 175° W, the boundary between FAO Major Fishing Areas 71 and 77 (shown in blue).  Other FAO area boundaries create additional clear discontinuities.
 
-[discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, thus eliminating a large source of potential commission errors and enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd species range predictions where otherwise suitable habitat is omitted where it encounters border between regions.  While such an odd boundary would likely be obvious when inspecting the distribution of an individual species, the distinction is likely to be obscured when aggregating many species ranges as is typical for biodiversity or conservation studies.  Applying an ecoregional spatial constraint, such as Marine Ecoregions of the World [@REF???], may reduce commission errors on these questionable margins, boosting confidence in these predicted distributions; expert review, though time-consuming, is the most certain route to improving the quality of these maps.
+[discussion] FAO Major Fishing Area boundaries provide a readily available method to roughly contrain AquaMaps predictions to appropriate ocean basins, thus eliminating a large source of potential commission errors and enabling rapid modeling of thousands of species ranges.  However, these boundaries are defined for statistical purposes based on economic and political considerations rather than ecological considerations, and can result in odd discontinuities in species range predictions where otherwise suitable habitat is excluded.  While such a discontinuous boundary would likely be obvious when inspecting the distribution of an individual species, the distinction is likely to be obscured when aggregating many species ranges as is typical for biodiversity or conservation studies.  Ecoregional spatial zones such as Marine Ecoregions of the World [@REF???] may provide an additional useful constraint on species ranges; expert review, though time-consuming, is the most certain route to boosting confidence in these predicted distributions.
 
 <!-- ## Case Studies
 
