updated figures incl pngs, reworked some of the results/discussion based on Halley's suggestions

--- a/ms_2_methods.Rmd
+++ b/ms_2_methods.Rmd
@@ -17,7 +17,7 @@ __Comparison of taxonomic and regional distribution__:
 To examine the overall taxonomic distribution across the spatial datasets, we grouped species by taxonomic class and data source, and determined the proportion of each class represented in each dataset.  To compare the spatial representation of the two datasets directly, we rasterized the IUCN species polygons to the same 0.5° grid as the AquaMaps species maps; we determined species presence within a grid cell as any non-zero overlap of a species polygon with the cell  ___(Fig S2)___.  For the AquaMaps dataset, we determined per-cell species count by including all species with non-zero probability of occurrence, to best approximate the "extent of occurrence" generally indicated by IUCN maps.
 
 __Alignment framework for paired maps__: OR __Comparison of paired maps__:
-Using genus and species binomials as a matching key, we identified "paired map" species, i.e. the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution.  We used the taxize package [@REF] in R [@REF] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
+Species range maps communicate a prediction of both the distribution of a species and the size of a species range.  To enable direct comparison of these measures between the two datasets, we identified "paired map" species, i.e. the subset of marine species that have range maps in both IUCN and AquaMaps current native distribution, using genus and species binomials as a matching key.  We used the taxize package [@REF] in R [@REF] to standardize species names and synonyms; for species with separate subpopulation maps in IUCN, we combined all subpopulations to create a single global population.   For each of these paired map species, we determined species presence within each spatial cell for each dataset using the same criteria outlined above.
 
 Overlaying paired distribution maps for each species, we defined and calculated _distribution alignment_ $\alpha_{dist}$ and _area ratio_ $\alpha_{area}$:
 
@@ -25,7 +25,7 @@ $$\alpha_{dist} = \frac{A_{small \cap large}}{A_{large}} * 100\%$$
 
 $$\alpha_{area} = \frac{A_{small}}{A_{large}} * 100\%$$
 
-For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as means of identifying areas of higher confidence.  Area ratio provides a proxy for frequency of commission and/or omission errors.  [range area is one critical feature/use of IUCN used as a criterion to help define extinction risk; can AquaMaps provide useful information here as well?]
+For each paired map species, $A_{small}$ and $A_{large}$ indicate the smaller and larger range representation (regardless of which dataset).  $A_{small \cap large}$ represents the amount of overlapping area between the two datasets.  Distribution alignment uses overlapping predictions of presence as a measure of concurrence between the two datasets.  Area ratio compares range size, used by IUCN as a criterion to help define extinction risk; it also provides a proxy for frequency of commission and/or omission errors.
 
 __(some heading here? to separate from alignment)__
 Corals provide a useful case study to examine differences in species range alignment.  They are an intensely studied taxonomic group whose importance in supporting biodiversity is undisputed; their dependence on photosynthesis provides habitat-limiting life history traits, and they don't tend to move.  Extracting data from the IUCN API [@REF?] we identified depth limitations of each coral species mapped in the IUCN dataset to verify that none are found below the photosynthetic depth limit of 200 m.  Using the same methodology as shown in Fig 2, we created a 200 m bathymetry raster from Natural Earth's 200 m bathymetry polygon [@natural_earth_XXX] and masked our IUCN coral rasters to identify mapped coral presence below 200 m.  The resulting maps were again compared to the AquaMaps rasters to examine distribution alignment and area ratio.
