--- a/ms_3_res_disc_concl.Rmd
+++ b/ms_3_res_disc_concl.Rmd
@@ -16,6 +16,8 @@ PLOS ONE editorial decisions do not rely on perceived significance or impact, so
 
 # Results and Discussion
 
+[brief overview of results/discussion?]
+
 ## Taxonomic and geographic coverage
 
 [results] The two datasets have notably different taxonomic (Fig 1A) and regional (Figs 1B, 1C) coverage.  AquaMaps encompasses a broader range of taxa than IUCN, as IUCN spatial data files are only available for select taxonomic groups that have been comprehensively assessed. While species numbers in both datasets peak in tropical latitudes near the equator, species counts for IUCN maps drop quickly beyond 30°N and 30°S, while AquaMaps includes distribution of species well into temperate latitudes.  The longitude frequency plots show a slight shift in the IUCN dataset away from the Atlantic and eastern Pacific compared to AquaMaps.  
@@ -57,9 +59,13 @@ med_occ_q123 <- round(median(spp_quads_occ$mean_occ[spp_quads_occ$quad %in% c('q
 
 ```
 
-## Distribution and range area alignment
+## Distribution and range size alignment
 
-[discussion] To explore differences in species distribution and range between the two datasets, we assessed the distribution alignment (how much of the smaller range falls within the larger range, i.e., where on the map) relative to the area ratio (ratio of smaller range area to larger range area, i.e., how much of the map) for each shared species (Fig 2A).  Where two independent methods predict presence (or absence) of a species in the same location, we can assume a higher confidence in the accuracy of that prediction.  Where one method predicts presence while the other predicts absence, we can investigate potential sources of commission and omission errors to refine our understanding of the species' range.  Understanding these sources of error can provide guidance to improve predictions of species range even when only one source of spatial data is available.
+[discussion] [results] Comparing distribution alignment and area ratio for the `r format(n_spp_both, big.mark = ',')` paired map species (Fig 2A), a weak negative linear pattern appears to emerge, suggesting that increasing similarity in range area correlates very slightly with decreasing distribution alignment (R^2 = .016).  The pattern itself is unimportant, and emerges simply due to the nature of the analysis and the datasets:  AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences more frequently than IUCN maps, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
+ 
+The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the paired map species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supporting materials (Fig S1).
+ 
+Where two independent methods predict presence (or absence) of a species in the same location, we can assume a higher confidence in the accuracy of that prediction.  Where one method predicts presence while the other predicts absence, we can investigate potential sources of commission and omission errors to refine our understanding of the species' range.  Understanding and addressing these sources of error provides guidance to improve predictions of species range even when only one source of spatial data is available.
 
 > __Fig 2.__ (A) Distribution alignment (overlap of smaller range within larger) versus area ratio (the ratio of smaller range area to the larger range area) for `r format(n_spp_both, big.mark = ',')` species included in both IUCN and AquaMaps datasets.  The upper right quadrant (quadrant 1) comprises species whose maps largely agree (better than median value) in both spatial distribution and the extent of described ranges (n = `r q1_count`; `r round(q1_count/nrow(spp_map_pairs) * 100, 1)` %).
 The upper left quadrant (quadrant 2) comprises species whose maps agree well in distribution, but disagree in area
@@ -69,13 +75,7 @@ The lower right quadrant (quadrant 3) includes species for which the paired maps
 The lower left quadrant (quadrant 4) indicates species for which the map pairs agree poorly in both area and distribution
 (n = `r q4_count`; `r round(q4_count/nrow(spp_map_pairs) * 100, 1)` %).
 (B) Alignment quadrant breakdown of species by taxonomic group.
-
-
-[discussion] This analysis revealed a weak negative linear pattern, suggesting that increasing similarity in range area correlates with decreasing distribution alignment.
- AquaMaps tends to extrapolate species ranges into suitable areas beyond known occurrences, such that each additional unit of range predicted by AquaMaps will fall in different locations than an additional unit of range predicted using IUCN methodology. For species with dissimilar range areas, predicted distribution for the smaller range can more easily fall within the generous bounds of the larger range. For species with increasingly similar range areas, differences in methodology become more difficult to "hide," and the distribution alignment generally becomes poorer.
  
-[results] The mean distribution alignment for species included in both datasets was `r dist_align_mean`%; the mean area alignment was `r area_align_mean`%. By dividing the paired map species into quadrants based on these means, we highlight categories of relationships that help further explain this general pattern. Representative maps from each category are provided in the supporting materials (Fig S1).
-
 [results/discussion] The upper right quadrant includes the species (n = `r n_q1`) whose described ranges are above average in alignment of both spatial distribution and area. These species tend to be well-studied and include wide-ranging pelagic organisms such as marine mammals, tunas, and billfishes (Fig 2B). This result is not surprising, as species with very large ranges are likely to be more aligned regardless of methodology simply because their ranges span nearly the entire map.
 
 [results/discussion] The area-mismatched ranges contained in the upper left quadrant (n = `r n_q2`) include many species whose spatial distribution is similar, but where one range is notably larger than the other (For `r round(n_q2_iucn_larger/n_q2 * 100, 1)`% of the species in this quadrant, the IUCN range is an average of 2.57 times larger than the AquaMaps range).  This suggests a high rate of commission and/or omission errors by one or both datasets; further analysis is required to disentangle the source and type of error contributing to poor area alignment.  The results of the coral analysis (described below) provide some insight.  
@@ -86,7 +86,7 @@ The lower left quadrant (quadrant 4) indicates species for which the map pairs a
 
 ## Coral depth exploration
 
-[discussion] Noting from Fig 2B that corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we chose to examine the effect of explicitly restricting IUCN ranges to depths based on species' life histories.  Corals offer an excellent case study, due to their foundational role in biodiverse habitats, as well as their lack of mobility and reliance on photosynthesis.  Ocean depth preference is explicitly included in AquaMaps models.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." [@REF http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources]), it is not presented as a requirement, so we cannot take its inclusion for granted.
+[discussion] Noting from Fig 2B that corals dominate the upper-left "distribution-aligned" quadrant of Fig 2A (n = `r n_q2_corals`; `r round(n_q2_corals/n_q2 * 100, 1)`% of all species in this quadrant), we chose to examine the effect of explicitly restricting IUCN ranges to depths based on species' life histories.  Corals offer an excellent case study, due to their foundational role in biodiverse habitats, as well as their lack of mobility and reliance on photosynthesis.  Ocean depth preference is explicitly included as a parameter in AquaMaps models.  While depth is recommended by the IUCN as a criterion for providers of range maps ("The limits of distribution can be determined by using known occurrences of the species, along with the knowledge of habitat preferences, remaining suitable habitat, elevation limited, and other expert knowledge of the species and its range." [@REF http://www.iucnredlist.org/technical-documents/red-list-training/iucnspatialresources]), it is not presented as a requirement, so we cannot take its inclusion for granted.
 
 [results] Fig 3A shows aggregated ranges of the 463 coral species mapped in the IUCN dataset, with their ranges broken into proportional area deeper and shallower than 200 m.  According to IUCN descriptions, none of these species is indicated to occur deeper than 200 m, and 94% are confined to waters shallower than 50 m; seven of the mapped species had no reported depth information.  Clipping coral ranges to shallower than 200 m eliminated an average of 47.6% of the total predicted area while still allowing for a generous estimate of suitable habitat.
 
